fixed filter modal overflow and ap table sorting links

--- a/wifiScout/www/css/filterModal.css
+++ b/wifiScout/www/css/filterModal.css
@@ -3,10 +3,14 @@
 }
 
 #SSID {
+  font-size: 15px;
+  font-size: 1.85vw;
   text-align: center;
 }
 
 #BSSID {
+  font-size: 15px;
+  font-size: 1.85vw;
   text-align: center;
 }
 
